dev/test_programs/INVALID/group10/parser/func_optional_body.go
package main;

func findMarker(c <-chan int) int 


func main() {
	x := float64(square/2)
	for i:= 0; i < 20; i++ {
		x = x - (x*x - float64(square))/(2*x);
	}
	println("The Square root of ", square, " is roughly ", x);

}